# Space-Invader

./: .gitignore  CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  README.md  Space-Invader.slnx  SpaceInvader.sln  premake5.lua
Game/: Space-Invader.cpp
Game/GameElements/AssetsManager/: AssetsManager.cpp  AssetsManager.hpp
Game/GameElements/AudioManager/: AudioManager.hpp
Game/GameElements/CollisionManager/: CollisionManager.cpp  CollisionManager.hpp
Game/GameElements/EntitiesManaging/: EntityContainer.hpp  EntityManager.hpp
Game/GameElements/Explosion/: Explosion.cpp  Explosion.hpp
Game/GameElements/Game/: Game.cpp  Game.hpp
Game/GameElements/Heart/: Heart.cpp  Heart.hpp
Game/GameElements/IGameMode/: IGameMode.hpp
Game/GameElements/Laser/: Laser.cpp  Laser.hpp
Game/GameElements/MenuHandle/: MenuHandle.cpp  MenuHandle.hpp  MenuInitializer.cpp
Game/GameElements/Meteor/: Meteor.cpp  Meteor.hpp
Game/GameElements/Modifier/: Modifier.cpp  Modifier.hpp
Game/GameElements/MultiPlayerMode/: MultiPlayerMode.cpp  MultiPlayerMode.hpp
Game/GameElements/Player/: Player.cpp  Player.hpp
Game/GameElements/Renderer/: Renderer.cpp  Renderer.hpp
Game/GameElements/SettingsManager/: SettingsManager.cpp  SettingsManager.hpp
Game/GameElements/SinglePlayerMode/: SinglePlayerMode.cpp  SinglePlayerMode.hpp
Game/GameElements/Stars/: Stars.cpp  Stars.hpp
Game/GameElements/util/: ByteMask.hpp  GameContext.hpp  Logger.hpp  MyRandom.hpp  Strings.hpp  enums.hpp  keys.hpp  menuHandler.hpp  performance.hpp  specs.hpp  timer.hpp
Game/UI/: Button.cpp  Button.h  Label.cpp  Label.h  Menu.h  PointerS.h  RectS.h  Slider.cpp  Slider.h  TextBox.cpp  TextBox.hpp  UI.h  Widget.h
Game/conf/: assets.json  settings.json
Game/include/: GameLayer.hpp  JsonParser.hpp  MenuLayer.hpp  game.hpp  heart.hpp  laser.hpp  menuHandler.hpp  modifier.hpp  player.hpp  specs.hpp  stars.hpp  timer.hpp
Game/include/AssetsManager/: AssetsManager.cpp
Game/include/AudioManager/: AudioManager.cpp  AudioManager.hpp
Game/include/CollisionManager/: CollisionManager.cpp  CollisionManager.hpp
Game/include/Game/: Game.cpp  Game.hpp
Game/include/IGameMode/: IGameMode.cpp  IGameMode.hpp
Game/include/MenuHandle/: MenuHandle.cpp  MenuHandle.hpp
Game/include/MultiPlayerMode/: MultiPlayerMode.cpp  MultiPlayerMode.hpp
Game/include/Renderer/: Renderer.cpp  Renderer.hpp
Game/include/SettingsManager/: SettingsManager.cpp  SettingsManager.hpp
Game/include/SinglePlayerMode/: SinglePlayerMode.cpp  SinglePlayerMode.hpp
Game/include/config/: ByteMask.hpp  Network-standalone.hpp  Strings.hpp  enums.hpp  keys.hpp
Game/src/: GameLayer.cpp  MenuLayer.cpp  SpaceInvader.cpp  game.cpp  heart.cpp  laser.cpp  meteor.cpp  player.cpp  stars.cpp
Network/include/: Client.h  Client.hpp  Common.hpp  Connection.h  Connection.hpp  Message.h  Message.hpp  Network.h  Server.h  Server.hpp  TsQueue.h  TsQueue.hpp
Network/src/: Client.cpp  Server.cpp
Server/src/: Space-Invader-Server.cpp
UI/: Button.cpp  Button.h  Label.cpp  Label.h  Menu.h  Menù.h  PointerS.h  RectS.h  Slider.cpp  Slider.h  UI.h  Widget.h
conf/: SpaceInvaderSettings.json  SpaceInvadersSettings.json  assets.json
include/: AssetsManager.hpp  GameLayer.hpp  JsonParser.hpp  MenuLayer.hpp  MyRandom.hpp  asteroide.hpp  astronave.hpp  cuore.hpp  esplosione.hpp  explosion.hpp  game.hpp  gioco.hpp  heart.hpp  interface.hpp  laser.hpp  menuHandler.hpp  meteor.hpp  player.hpp  powerup.hpp  settingsManager.hpp  specs.hpp  stars.hpp  stelle.hpp  timer.hpp
include/config/: ByteMask.hpp  Strings.hpp  enums.hpp  keys.hpp
src/: GameLayer.cpp  MenuLayer.cpp  Space Invader.cpp  asteroide.cpp  astronave.cpp  cuore.cpp  esplosione.cpp  explosion.cpp  game.cpp  gioco.cpp  heart.cpp  interface.cpp  laser.cpp  meteor.cpp  modifier.cpp  player.cpp  powerup.cpp  settingsManager.cpp  stars.cpp  stelle.cpp
